# wagtail-lowdown

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  gulpfile.js  package-lock.json  package.json  pyproject.toml  tox.ini
.github/workflows/: test.yml
app/: urls.py
app/home/: tests.py
app/home/templates/home/: home_page.html
app/search/: tests.py
app/settings/: base.py  dev.py  local-example.py
app/static/css/: main.css  main.min.css  style.css  style.min.css
app/static/js/: main.js  main.js.map  main.min.js  main.min.js.map  scripts.min.js
app/templates/: base.html
docs/licenses/: LICENSE.md
fakeapp/: tests.py
scripts/: rollup.config.js  sass.js
src/: index.html
src/css/: style.scss
src/scss/: _layout.scss  _typography.scss  main.scss
src/scss/components/: _navigation.scss
