[tool.poetry]
name = "wagtail-lowdown"
version = "0.1.0"
description = ""
authors = ["Nick Moreton <nickmoreton@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wagtail = "^3.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
tox = "^3.27.1"
codecov = "^2.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
